--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +16,7 @@
     "@types/react-dom": "^18.2.8",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.1",
+    "framer-motion": "^10.16.4",
     "openai": "^4.10.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
