--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/react-dom": "^18.2.8",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.1",
+    "d3-scale": "^4.0.2",
     "framer-motion": "^10.16.4",
     "openai": "^4.10.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
@@ -49,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/d3-scale": "^4.0.8"
   }
 }
