--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
+    "victory": "^36.6.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
