--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "3d-force-graph": "^1.73.0",
     "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@firebase/firestore": "^4.3.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,8 +17,10 @@
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "@types/react-router-dom": "^5.3.3",
+    "@types/three": "^0.158.2",
     "axios": "^1.5.1",
     "d3-scale": "^4.0.2",
+    "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
     "openai": "^4.10.0",
     "path-browserify": "^1.0.1",
@@ -25,6 +29,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "three": "^0.158.0",
     "typescript": "^4.9.5",
     "victory": "^36.6.12",
     "web-vitals": "^2.1.4"
