--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/d3": "^7.4.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.54",
     "@types/react": "^18.2.23",
@@ -19,6 +20,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.158.2",
     "axios": "^1.5.1",
+    "d3": "^7.8.5",
     "d3-scale": "^4.0.2",
     "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
