--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@firebase/firestore": "^4.3.2",
+    "@rive-app/react-canvas": "^4.5.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -31,6 +32,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "rive": "^1.1.4",
     "three": "^0.158.0",
     "typescript": "^4.9.5",
     "victory": "^36.6.12",
