--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "claridad-ai",
-  "version": "0.1.0",
-  "private": true,
+  "name": "multi-modal-mediator-for-interlocutory",
+  "version": "0.11.11",
+  "homepage": "https://meekmachine.github.io/starter-project/",
   "dependencies": {
     "3d-force-graph": "^1.73.0",
     "@chakra-ui/core": "^0.8.0",
@@ -26,6 +26,7 @@
     "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
+    "gh-pages": "^6.1.0",
     "openai": "^4.10.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
@@ -41,6 +42,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
