--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-force-graph-3d": "^1.24.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
